feat(api): add bundler api to prevent CORS
